@@ -2021,6 +2021,18 @@ is $dom->at('a')->wrap('C<c><d>D</d><e>E</e></c>F')->parent->type, 'd',
   'right element';
 is "$dom", '<b>C<c><d>D<a>Test</a></d><e>E</e></c>F</b>', 'right result';
 
+# Wrap content
+$dom = Mojo::DOM->new('<a>Test</a>');
+is $dom->wrap_content('<b></b>')->node, 'root', 'right node';
+is "$dom", '<b><a>Test</a></b>', 'right result';
+is $dom->at('b')->strip->at('a')->wrap_content('1<b c="d"></b>')->type, 'a',
+  'right element';
+is "$dom", '<a>1<b c="d">Test</b></a>', 'right result';
+is $dom->at('a')->wrap_content('C<c><d>D</d><e>E</e></c>F')->parent->node,
+  'root', 'right node';
+is "$dom", '<a>C<c><d>D1<b c="d">Test</b></d><e>E</e></c>F</a>',
+  'right result';
+
 # Broken "div" in "td"
 $dom = Mojo::DOM->new(<<EOF);
 <table>
